sock-shop-permissive-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: sock-shop
spec:
  mtls:
    mode: PERMISSIVE
